fix sliding img gaps

--- a/app_searchengine/css/gallery.css
+++ b/app_searchengine/css/gallery.css
@@ -372,8 +372,7 @@ body {
 
 .item{
     border: solid 1px gray;
-    padding: 3px;
-    margin: 5px;
+
 }
 
 .category_box{
